--- a/UnoPlatformSandbox/UnoPlatformSandbox.UWP/UnoPlatformSandbox.UWP.csproj
+++ b/UnoPlatformSandbox/UnoPlatformSandbox.UWP/UnoPlatformSandbox.UWP.csproj
@@ -10,14 +10,11 @@
 			-->
       <Version>6.2.8</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI">
-      <Version>5.1.0-build.200.gf9c311b069</Version>
+    <PackageReference Include="Microsoft.Toolkit.Uwp">
+      <Version>5.1.1</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI">
-      <Version>1.46.0-dev.2204</Version>
-    </PackageReference>
-    <PackageReference Include="Uno.Wasm.Bootstrap">
-      <Version>1.0.0-dev.300</Version>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
+      <Version>5.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup>
